# aaaa-nexus-mcp

./: .gitignore  .mcp.json  .pylintrc  AGENTS.md  Dockerfile  LICENSE  README.md  REGISTRY_SUBMISSION.md  count_tools.py  plugin.json  pyproject.toml  pyrightconfig.json  server.json  smithery.yaml
.claude/skills/hive/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: forager.agent.md  hive.agent.md  hygienic.agent.md  scout.agent.md
.github/hooks/scripts/: check-plan.sh  inject-context.sh
.github/instructions/: hive-workflow.instructions.md
.github/prompts/: execute-approved-plan.prompt.md  plan-feature.prompt.md  review-plan.prompt.md  verify-completion.prompt.md
.github/skills/agents-md-mastery/: SKILL.md
.github/skills/dispatching-parallel-agents/: SKILL.md
.github/skills/executing-plans/: SKILL.md
.github/skills/parallel-exploration/: SKILL.md
.github/skills/writing-plans/: SKILL.md
docs/: HOMEPAGE_COPY.md  INTEGRATION.md  LORA_REWARDS.md  MCP_CLIENTS.md  MCP_HTTP_SERVER.md  TOOLS.md  TRUSTED_RAG.md
examples/: agent_self_gate.py  curl_quickstart.sh  lora_flywheel.py  python_quickstart.py  trusted_rag.py  typescript_quickstart.ts
examples/mcp_configs/: README.md  cursor.json  vscode_settings.json  zed.json
src/aaaa_nexus_mcp/: __init__.py  __main__.py  client.py  codex.py  config.py  errors.py  server.py
src/aaaa_nexus_mcp/tools/: __init__.py  aegis.py  codex_local.py  compliance.py  (+17 more)
tests/: test_codex.py  test_lora.py  test_map_terrain.py  test_mcp.py  test_plugin_manifest.py  test_public_release.py  test_tools.py  test_uep.py
