[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aaaa-nexus-mcp"
version = "0.1.0"
description = "Claude Code MCP plugin for the AAAA-Nexus trust, security, and agent infrastructure API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{name = "Atomadic", email = "dev@atomadic.tech"}]
keywords = ["mcp", "nexus", "claude", "trust", "ai-safety", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
  "mcp[cli]>=1.9.4",
  "httpx>=0.28,<0.29",
]

[project.urls]
Homepage = "https://atomadic.tech"
Repository = "https://github.com/AAAA-Nexus/aaaa-nexus-mcp"
Documentation = "https://atomadic.tech/docs/mcp"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.11,<0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aaaa_nexus_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
